--- a/src/Makefile.win32.features
+++ b/src/Makefile.win32.features
@@ -231,6 +231,20 @@ ifeq ($(CAIRO_HAS_FT_FONT),1)
 enabled_cairo_pkgconf += cairo-ft.pc
 endif
 
+supported_cairo_headers += $(cairo_fc_headers)
+all_cairo_headers += $(cairo_fc_headers)
+all_cairo_private += $(cairo_fc_private)
+all_cairo_sources += $(cairo_fc_sources)
+ifeq ($(CAIRO_HAS_FC_FONT),1)
+enabled_cairo_headers += $(cairo_fc_headers)
+enabled_cairo_private += $(cairo_fc_private)
+enabled_cairo_sources += $(cairo_fc_sources)
+endif
+all_cairo_pkgconf += cairo-fc.pc
+ifeq ($(CAIRO_HAS_FC_FONT),1)
+enabled_cairo_pkgconf += cairo-fc.pc
+endif
+
 supported_cairo_headers += $(cairo_ps_headers)
 all_cairo_headers += $(cairo_ps_headers)
 all_cairo_private += $(cairo_ps_private)
