[test-win32] Fix static linking of the test suite.
Previously, the test suite needed to be dynamically linked to work.

--- a/boilerplate/Makefile.win32
+++ b/boilerplate/Makefile.win32
@@ -13,7 +13,7 @@ SOURCES = \
 	$(enabled_cairo_boilerplate_sources) \
 	$(NULL)
 
-OBJECTS = $(patsubst %.c, $(CFG)/%.obj, $(SOURCES))
+OBJECTS = $(patsubst %.c, $(CFG)/%-static.obj, $(SOURCES))
 
 
 all: $(CFG)/boiler.lib
