[test] Never use gcc __attribute__ magic for constructors.
The configure test for __attribute__((constructor)) succeeds when
compiling with Sun Studio 12 on OpenSolaris but the attribute
is just ignored and has no actual effect.  This causes the test
suite to not run any tests at all.  With this patch we revert to
always using make-cairo-test-constructors.pl.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -73,11 +73,8 @@ cairo-test-constructors.c: Makefile $(test_sources) make-cairo-test-constructors
 cairo_test_suite_SOURCES = 		\
 	$(cairo_test_suite_sources)	\
 	$(cairo_test_suite_headers)	\
-	$(test_sources)
-if CAIRO_HAS_CONSTRUCTOR_ATTRIBUTE
-else
-cairo_test_suite_SOURCES += cairo-test-constructors.c
-endif
+	$(test_sources)			\
+	cairo-test-constructors.c
 cairo_test_suite_LDADD = 					\
 	$(top_builddir)/test/pdiff/libpdiff.la 			\
         $(top_builddir)/boilerplate/libcairoboilerplate.la	\
