[boilerplate] Check for connect() in libsocket.
Solaris requires -lsocket to be able to talk to
the any2ppm daemon over unix domain sockets.

--- a/boilerplate/Makefile.am
+++ b/boilerplate/Makefile.am
@@ -45,6 +45,8 @@ if CAIRO_HAS_WIN32_SURFACE
 libcairoboilerplate_la_LIBADD += -lwinspool
 endif
 
+libcairoboilerplate_la_LIBADD += $(CAIROBOILERPLATE_LIBS)
+
 test: check
 
 if CROSS_COMPILING
