--- a/util/cairo-trace/cairo-trace.in
+++ b/util/cairo-trace/cairo-trace.in
@@ -86,7 +86,7 @@ if test -n "$flush"; then
 fi
 
 if test -z "$nofile"; then
-    CAIRO_TRACE_OUTDIR=. "$@"
+    CAIRO_TRACE_OUTDIR=`pwd` "$@"
 else
     CAIRO_TRACE_FD=3 "$@" 3>&1 >/dev/null
 fi
