[perf] Add a pure glyphs performance metric
Use the new API Behdad exposed in 1.8 to precompute a glyph string using
Cairo and then benchmark cairo_show_glyphs(). This is then equivalent to
the text benchmark but without the extra step of converting to glyphs on
every call to cairo_show_text() i.e. it shows the underlying glyph
rendering performance.

--- a/perf/Makefile.am
+++ b/perf/Makefile.am
@@ -40,6 +40,7 @@ cairo_perf_SOURCES =		\
 	subimage_copy.c		\
 	tessellate.c		\
 	text.c			\
+	glyphs.c		\
 	twin.c			\
 	unaligned-clip.c	\
 	world-map.c		\
