--- a/util/Makefile.am
+++ b/util/Makefile.am
@@ -24,10 +24,13 @@ backtrace_symbols_la_LIBADD  = -lbfd -liberty
 
 #malloc_stats_la_LIBADD  = $(backtrace_symbols_la_LIBADD) backtrace-symbols.lo
 
-noinst_PROGRAMS = font-view
+noinst_PROGRAMS =
 
+if HAVE_GTK
+noinst_PROGRAMS += font-view
 font_view_CFLAGS = $(gtk_CFLAGS)
 font_view_LDADD = ../src/libcairo.la $(gtk_LIBS)
+endif
 
 EXTRA_DIST += \
 	COPYING \
