[trace] Redirect stdout to /dev/null when compressing
Otherwise we mix in stdout in with the trace and prevent replay.

--- a/util/cairo-trace/cairo-trace.in
+++ b/util/cairo-trace/cairo-trace.in
@@ -104,7 +104,7 @@ if test -z "$nofile"; then
     CAIRO_TRACE_OUTDIR=`pwd` "$@"
 elif test -n "$compress"; then
     echo Generating compressed trace file $1.$$.lzma
-    CAIRO_TRACE_FD=3 "$@" 3>&1 | lzma -cz9 > $1.$$.lzma
+    CAIRO_TRACE_FD=3 "$@" 3>&1 >/dev/null | lzma -cz9 > $1.$$.lzma
 else
     CAIRO_TRACE_FD=3 "$@" 3>&1 >/dev/null
 fi
