--- a/util/cairo-trace/cairo-trace.in
+++ b/util/cairo-trace/cairo-trace.in
@@ -20,6 +20,7 @@ Whatever else happens is driven by its argument:
   --no-file       - Disable the creation of an output file. Outputs to the
                     terminal instead.
   --no-callers    - Do not lookup the caller address/symbol/line whilst tracing.
+  --mark-dirty    - Record image data for cairo_mark_dirty() [default]
   --no-mark-dirty - Do not record image data for cairo_mark_dirty()
   --compress      - Compress the output with LZMA
   --profile       - Combine --no-callers and --no-mark-dirty and --compress
@@ -46,6 +47,10 @@ while test $skip -eq 1; do
     --no-callers)
 	skip=1
 	nocallers=1
+	;;
+    --mark-dirty)
+	skip=1
+	nomarkdirty=
 	;;
     --no-mark-dirty)
 	skip=1
