[test] Exercise overlapping glyphs
Quite an expensive test that converts an image into a distorted array of
glyphs, using a perspective transformation taking the intensity of the
pixel as depth. This generates a pretty picture and many overlapping
glyphs.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -461,6 +461,7 @@ REFERENCE_IMAGES = \
 	mask.pdf.rgb24.ref.png	\
 	mask.quartz.ref.png	\
 	mask.quartz.rgb24.ref.png	\
+	mask-glyphs.ref.png	\
 	mask-surface-ctm.ref.png	\
 	mask-surface-ctm.rgb24.ref.png	\
 	mask-surface-ctm.svg11.argb32.ref.png	\
