[drm] Add an accelerated image surface.
Use the DRM interface to h/w accelerate composition on image surfaces.
The purpose of the backend is simply to explore what such a hardware
interface might look like and what benefits we might expect.  The
use case that might justify writing such custom backends are embedded
devices running a drm compositor like wayland - which would, for example,
allow one to write applications that seamlessly integrated accelerated,
dynamic, high quality 2D graphics using Cairo with advanced interaction
(e.g. smooth animations in the UI) driven by a clutter framework...

In this first step we introduce the fundamental wrapping of GEM for intel
and radeon chipsets, and, for comparison, gallium. No acceleration, all
we do is use buffer objects (that is use the kernel memory manager) to
allocate images and simply use the fallback mechanism. This provides a
suitable base to start writing chip specific drivers.

--- a/boilerplate/Makefile.sources
+++ b/boilerplate/Makefile.sources
@@ -23,6 +23,8 @@ cairo_boilerplate_private = \
 # following lines, even if beos surface is not enabled.  Disable it for now.
 #libcairoboilerplate_la_SOURCES += cairo-boilerplate-beos.cpp
 
+cairo_boilerplate_directfb_sources = cairo-boilerplate-directfb.c
+cairo_boilerplate_drm_sources = cairo-boilerplate-drm.c
 cairo_boilerplate_gl_sources = cairo-boilerplate-gl.c
 cairo_boilerplate_glitz_sources = \
 	cairo-boilerplate-glitz-agl.c \
