[script] Disable compilation of examples
Now that cairo-perf-trace exists and is a far superior replay tool, use
EXTRA_PROGRAM for the original replay tools.

--- a/util/cairo-script/Makefile.am
+++ b/util/cairo-script/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = examples
 
 lib_LTLIBRARIES = libcairo-script-interpreter.la
-noinst_PROGRAMS = csi-replay csi-exec
+EXTRA_PROGRAMS = csi-replay csi-exec
 
 AM_CPPFLAGS = -I$(top_srcdir)/src -I$(top_builddir)/src
 
