[trace] Add sticky bit to (system-wide) trace output dir
Need to allow user programs to dump their traces into the common output
directory, when using /etc/ld.so.preload to capture traces for the entire
desktop.

--- a/util/cairo-trace/Makefile.am
+++ b/util/cairo-trace/Makefile.am
@@ -19,7 +19,8 @@ cairo_trace_la_LIBADD = -ldl -lz $(BFD_LIBS)
 
 
 system-install: install
-	mkdir -p $(cairooutdir)
+	-mkdir -p $(cairooutdir)
+	-chmod 01777 $(cairooutdir)
 	grep -sq $(cairolibdir)/cairo-trace.so /etc/ld.so.preload || echo $(cairolibdir)/cairo-trace.so >> /etc/ld.so.preload
 
 system-uninstall: uninstall
